# gnns4code

./: install_dependencies.sh
c/ConvertToExactRepresentation/: CMakeLists.txt  main.cpp
c/clang_miner/: CMakeLists.txt  clang_miner.cpp
c/miner_llvm_pass/: .gitrepo  CMakeLists.txt  README.org
config/: clang.json  clang_predictive.json
data/: call_data  code_clang_train.json
data/algo_classification_task/: correct_source_files.sh  header.cpp
data/c/: https-api-github-com-repos-4Liamk-KFusion-git-blobs-b9a865cb3db096ebfec986fa89cff3d0acff4915.cl  https-api-github-com-repos-ADonut-LLVM-GPGPU-git-blobs-9832604b0459fd94161c51c0f5e3a52187510355.cl  https-api-github-com-repos-ARM-software-ComputeLibrary-git-blobs-19118ea23b705fb18a0773651025a79e040f044e.cl  https-api-github-com-repos-ARM-software-ComputeLibrary-git-blobs-618937f36d8b70e903a5a8b0fb3ca980ee460007.cl  https-api-github-com-repos-ARM-software-ComputeLibrary-git-blobs-a652b28e6a14a268f507b94190da54ab4a3b24fd.cl  https-api-github-com-repos-ARM-software-ComputeLibrary-git-blobs-b58dc7af72f4f64c0050da7104cd159755f0ce5a.cl  https-api-github-com-repos-ARM-software-ComputeLibrary-git-blobs-d3b29584b999a43b410d1493cf0f99e1de22279a.cl  https-api-github-com-repos-Aazmp-vp8oclenc-git-blobs-4f51e5c7ccc1bd9a931d7c34656841347e1d0fbc.cl  https-api-github-com-repos-Akson-OpenCL_Test1-git-blobs-ca8157ffeec9d0b58a5830fe00289e04a64fe149.cl  https-api-github-com-repos-AlexeyAB-Darknet-On-OpenCL-git-blobs-c2efb3fc07ef9af053b1e59a6cdeb0a1f587252b.cl  https-api-github-com-repos-Amadiro-opencl-git-blobs-96620334bc402ea518924cdfe82f444fe149e35c.cl  https-api-github-com-repos-Branor-gpgpu-java-git-blobs-5f1b50fa08f941bdc1f698732011580864f094b7.cl  https-api-github-com-repos-ChiahungTai-OpenCL-playgorund-git-blobs-170cc8e7a5dd0b1629837e2f4d18160a1d3a9ceb.cl  https-api-github-com-repos-ChristopheF-OpenCLTestFramework-git-blobs-9ea9912f93872fb95e8545942507dd8cb6e4b6ea.cl  https-api-github-com-repos-DSoliz-GPGPU_Examples_TestGround-git-blobs-6972fa8190d6acfdb444064f6ec1c37e78724cc8.cl  (+598 more)
data/thread_coarsen_task/: pact-2014-runtimes.csv
python/: requirements.txt  utils.py
setup/: setupMinerAndConverter.sh
taurus/: checker.sh  ml.slurm  ml_long.slurm  wrapper.sh
(+3647 files in other folders)
